0.2 (UNRELEASED)
----------------
Improvements:
 - --output does not overwrite already existing files.
 - Some code cleanup and robustification, thanks Yann Droneaud!
 - Proper handling of Control-C (SIGINT), thanks Yann Droneaud!

Bug fixes:
 - Listen to "close" events as well.

0.1 (2012-02-07)
----------------
Initial version.